--- a/developer.html
+++ b/developer.html
@@ -101,7 +101,7 @@
         </div> -->
         <div class="staff__container ">
             <div class="main__Heading u-margin-bottom-big" id="black">
-                The Team
+                DEVELOPERS
             </div>
             <div class="row1 u-margin-bottom-big">
                 <div class="col-1-of-2">
@@ -122,28 +122,9 @@
                                     Developer</h2>
                             </span>
                             <p align="justify" class="paragraph">
-                                    <b id="black">'TALK IS CHEAP, SHOW ME THE CODE'</b> <br>
-                                    Currently a 3rd Year student in Computer Science.Have a keen interest
-                                in web development and transforming thoughts into reality.Paving my path to become a 'Mean
-                                Stack Developer'.Highly ambitious with a goal to contribute to this society with
-                                all my zeal through web development.
-                                Work keeps me going and I'm nothing without it. From an engineer's vision, I aspire to accomplish new projects with sole purpose of 'Problem Solving'.
-                                I see web development as a developer's canvas and I try to color it as my creativity hits me. Coding is an art and I hope to inspire people around me to enter into this magical world of developers.
+                                <br><b>CONTACT</b><br>9463743264<br>hspreet1998@gmail.com
                                </p>
-                            <!-- <span>
-                                <h2 class="text-center" id="black">Education</h2>
-                            </span>
-                            <p class="paragraph">Bachelor of Technology, Computer Science and
-                                Engineering, expected graduation 2020, Guru Nanak Dev Engineering College,
-                                Ludhiana.</p> -->
-                            <!-- <span>
-                                <h2 class="text-center" id="black">Skills</h2>
-                            </span>
-                            <p class="paragraph">
-                                <span id="black">Frameworks: </span>HTML5,CSS3,PHP,SASS<br>
-                                <span id="black">Scripts/UI: </span>JavaScript,JQuery,Bootstrap<br>
-                                <span id="black">Database: </span>MySQL,NoSQL
-                            </p> -->
+                           
 
                             <ul class="text-center">
                                 <li class="footer__item"><a href="https://www.facebook.com/profile.php?id=100005397032991&ref=bookmarks"
@@ -171,26 +152,7 @@
                                 <h2 class="text-center u-margin-top-small-up-2" id="black">Full Stack Developer</h2>
                             </span>
                             <p align="justify" class="paragraph">
-                                <b id="black">'IF IT WORKS,THEN DON'T TOUCH IT.'</b><br>
-                                I think that the future IT industry demands a flexible approach to problem-solving that
-                                uses limited resources in an innovative way.Though we already have developed methods to
-                                solve every problem,but we lag behind in their efficiency to produce results,especially
-                                in a country like INDIA,where technology is a way far.Therefore working on already
-                                developed methods and improving them is my main objective,by combining all
-                                frameworks,languages and producing efficient and desired results.I don't think so,a
-                                master in one skill will only a work,in today's time a person should be an ace of
-                                all,to match the current industry's requirements.</p>
-                            <!-- <span>
-                                <h2 class="text-center" id="black">Education</h2>
-                            </span>
-                            <p class="paragraph">Bachelor of Technology, Computer Science and
-                                Engineering, expected graduation 2020, Guru Nanak Dev Engineering College,
-                                Ludhiana.</p>
-                            <h2 class="text-center" id="black">Skills</h2>
-                            </span>
-                            <p class="paragraph">Bachelor of Technology, Computer Science and
-                                Engineering, expected graduation 2020, Guru Nanak Dev Engineering College,
-                                Ludhiana.</p> -->
+                                <br><b>CONTACT</b><br>9465453681<br>itspardeepsingh@gmail.com</p>
 
                             <ul class="text-center">
                                 <li class="footer__item"><a href="https://www.facebook.com/itspardeepsingh" target="_blank"><i
