--- a/about.html
+++ b/about.html
@@ -450,7 +450,7 @@
 
                 <div class="col-1-of-3">
                     <div class="footer__copyright">
-                        <p align="justify" class="u-margin-bottom-very-small"><a href="download.html" id="developer_id">Downloads
+                        <p align="justify" class="u-margin-bottom-very-small"><a href="download.php" id="developer_id">Downloads
                             </a>
                         </p>
                         <p align="justify" class="footer__para"><a href="developer.html" id="developer_id">Developed By
