--- a/developer.html
+++ b/developer.html
@@ -227,7 +227,7 @@
 
                 <div class="col-1-of-3">
                     <div class="footer__copyright">
-                        <p class="u-margin-bottom-very-small"><a href="download.html" id="developer_id">Downloads
+                        <p class="u-margin-bottom-very-small"><a href="download.php" id="developer_id">Downloads
                             </a>
                         </p>
                         <p class="footer__para"><a href="developer.html" id="developer_id">Developed By
