--- a/developer.html
+++ b/developer.html
@@ -159,7 +159,7 @@
                                             class="fa fa-facebook footer__icons footer__icons--mid"></i></a></li>
                                 <li class="footer__item"><a href="https://www.instagram.com/pardeep_______singh/"
                                         target="_blank"><i class="fa fa-instagram footer__icons footer__icons--mid"></i></a></li>
-                                <li class="footer__item"><a href="" target="_blank"><i class="fa fa-github footer__icons footer__icons--mid"></i></a></li>
+                                <li class="footer__item"><a href="https://github.com/erpardeepsingh" target="_blank"><i class="fa fa-github footer__icons footer__icons--mid"></i></a></li>
                                 <li class="footer__item"><a href="https://www.linkedin.com/in/pardeep-singh-52316515b/"
                                         target="_blank"><i class="fa fa-linkedin footer__icons footer__icons--mid"></i></a></li>
                             </ul>
