--- a/about.html
+++ b/about.html
@@ -102,9 +102,9 @@
 
                     <div class="col-1-of-2">
                         <div class="composition u-margin-top-small-2">
-                            <img src="images/aim1.JPG" alt="photo-1" class="composition__photo composition__photo--p1">
-                            <img src="images/aim2.jpg" alt="photo-1" class="composition__photo composition__photo--p2">
-                            <img src="images/aim3.jpg" alt="photo-1" class="composition__photo composition__photo--p3">
+                            <img src="images/aim1.jpg" alt="photo-1" class="composition__photo composition__photo--p1">
+                            <img src="images/aim2.jpeg" alt="photo-1" class="composition__photo composition__photo--p2">
+                            <img src="images/aim3.jpeg" alt="photo-1" class="composition__photo composition__photo--p3">
                         </div>
                     </div>
                 </div>
