--- a/nccGndec.html
+++ b/nccGndec.html
@@ -63,7 +63,7 @@
             </ul>
         </div>
     </nav>
-</div>
+</div> 
     <section class="section__nccGndec">
         <div class="nccGndec__container" id="black">
             <div class="main__Heading padding" id="black">
@@ -205,17 +205,17 @@
                 <div class="row1">
                     <div class="col-1-of-3">
                         <div class="img__box">
-                            <img src="images/nccgndec1.JPG" alt="" class="img__box--animated img-fluid">
+                            <img src="images/nccgndec1.jpeg" alt="" class="img__box--animated img-fluid">
                         </div>
                     </div>
                     <div class="col-1-of-3">
                         <div class="img__box">
-                            <img src="images/nccgndec2.JPG" alt="" class="img__box--animated  img-fluid">
+                            <img src="images/nccgndec2.jpeg" alt="" class="img__box--animated  img-fluid">
                         </div>
                     </div>
                     <div class="col-1-of-3">
                         <div class="img__box">
-                            <img src="images/nccgndec3.JPG" alt="" class="img__box--animated img-fluid">
+                            <img src="images/nccgndec3.jpeg" alt="" class="img__box--animated img-fluid">
                         </div>
                     </div>
                 </div>
